--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -35,7 +35,13 @@
                 <ng-container *ngFor="let country of countryList">
                     <mat-option [hidden]="country.hidden" [value]="country"
                         (click)="tosslePerOne('allSelectedCountries', 'countries', 'countryList')">
-                        {{country.name}}
+                        <div class="mat-option-container">
+                            <span>{{country.name}}</span>
+                            <button type="button" class="btn btn-sm btn-secondary"
+                                (click)="uniqueSelection('countries', 'country', country)">
+                                Only
+                            </button>
+                        </div>
                     </mat-option>
                 </ng-container>
 
@@ -84,7 +90,13 @@
                 <ng-container *ngFor="let retailer of retailerList">
                     <mat-option [hidden]="retailer.hidden" [value]="retailer"
                         (click)="tosslePerOne('allSelectedRetailers', 'retailers', 'retailerList')">
-                        {{retailer.name}}
+                        <div class="mat-option-container">
+                            <span>{{retailer.name}}</span>
+                            <button type="button" class="btn btn-sm btn-secondary"
+                                (click)="uniqueSelection('retailers', 'retailer', retailer)">
+                                Only
+                            </button>
+                        </div>
                     </mat-option>
                 </ng-container>
 
@@ -145,7 +157,13 @@
                 </mat-option>
                 <mat-option *ngFor="let sector of sectorList" [value]="sector"
                     (click)="tosslePerOne('allSelectedSectors', 'sectors', 'sectorList')">
-                    {{sector.name}}
+                    <div class="mat-option-container">
+                        <span>{{sector.name}}</span>
+                        <button type="button" class="btn btn-sm btn-secondary"
+                            (click)="uniqueSelection('sectors', 'sector', sector)">
+                            Only
+                        </button>
+                    </div>
                 </mat-option>
             </mat-select>
             <small class="text-danger" *ngIf="sectors?.value?.length < 1 && sectors.touched">
@@ -183,7 +201,13 @@
                 </mat-option>
                 <mat-option *ngFor="let category of categoryList" [value]="category"
                     (click)="tosslePerOne('allSelectedCategories', 'categories', 'categoryList')">
-                    {{category.name}}
+                    <div class="mat-option-container">
+                        <span>{{category.name}}</span>
+                        <button type="button" class="btn btn-sm btn-secondary"
+                            (click)="uniqueSelection('categories', 'category', category)">
+                            Only
+                        </button>
+                    </div>
                 </mat-option>
             </mat-select>
             <small class="text-danger" *ngIf="categories?.value?.length < 1 && categories.touched">
@@ -232,10 +256,15 @@
                 <ng-container *ngFor="let campaign of campaignList">
                     <mat-option [hidden]="campaign.hidden" [value]="campaign"
                         (click)="tosslePerOne('allSelectedCampaigns', 'campaigns', 'campaignList')">
-                        {{campaign.name}}
+                        <div class="mat-option-container">
+                            <span>{{campaign.name}}</span>
+                            <button type="button" class="btn btn-sm btn-secondary"
+                                (click)="uniqueSelection('campaigns', 'campaign', campaign)">
+                                Only
+                            </button>
+                        </div>
                     </mat-option>
                 </ng-container>
-
             </mat-select>
             <small class="text-muted mt-1" *ngIf="campaignList?.length < 1 && campaignsReqStatus === 2">
                 No existen campañas para el Periodo, Sectores y Categorías seleccionados
@@ -272,7 +301,13 @@
                 </mat-option>
                 <mat-option *ngFor="let source of sourceList" [value]="source"
                     (click)="tosslePerOne('allSelectedSources', 'sources', 'sourceList')">
-                    {{source.name}}
+                    <div class="mat-option-container">
+                        <span>{{source.name}}</span>
+                        <button type="button" class="btn btn-sm btn-secondary"
+                            (click)="uniqueSelection('sources', 'source', source)">
+                            Only
+                        </button>
+                    </div>
                 </mat-option>
             </mat-select>
         </div>
