--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -304,24 +304,14 @@
         </div>
 
         <div class="row mt-5">
-            <div class="col-12">
+            <div class="col-12" *ngIf="selectedCategories.length > 1">
                 <div class="pills-container mb-4">
                     <ul class="nav nav-pills nav-fill">
-                        <li class="nav-item">
-                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab5 === 1}"
-                                (click)="selectedTab5 = 1; showTopProducts('ps')">PS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab5 === 2}"
-                                (click)="selectedTab5 = 2; showTopProducts('print')">HW Print</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab5 === 3}"
-                                (click)="selectedTab5 = 3; showTopProducts('supplies')">Supplies</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab5 === 4}"
-                                (click)="selectedTab5 = 4; showTopProducts('accesories')">Accesorios</a>
+                        <li class="nav-item" *ngFor="let category of selectedCategories">
+                            <a class="nav-link p-2" [ngClass]="{'active': category.id === selectedTab5}"
+                                (click)="selectedTab5 = category.id; getTopProducts(category.id)">
+                                {{ category.name}}
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -332,44 +322,51 @@
                         <span class="h4">Top Productos</span>
                     </div>
                     <div class="card-body">
-                        <div class="adaptable-container">
-                            <table mat-table [dataSource]="dataSource">
+                        <div class="adaptable-container" [ngClass]="{'auto': topProductsReqStatus === 3}">
+                            <div class="loading-shade" [hidden]="topProductsReqStatus > 1">
+                                <mat-spinner></mat-spinner>
+                            </div>
+
+                            <table mat-table [dataSource]="topProductsSource">
                                 <!-- category column -->
                                 <ng-container matColumnDef="rank">
                                     <th mat-header-cell *matHeaderCellDef [style.width.px]="150">Rank</th>
-                                    <td mat-cell *matCellDef="let element"> {{element.rank}} </td>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{element.rank}} </td>
                                 </ng-container>
 
                                 <!-- product column -->
                                 <ng-container matColumnDef="product">
-                                    <th mat-header-cell *matHeaderCellDef> Producto </th>
+                                    <th mat-header-cell *matHeaderCellDef>Producto </th>
                                     <td mat-cell *matCellDef="let element">
-                                        <span #tooltip="matTooltip" md-raised-button [matTooltip]="element.product"
+                                        <!-- <span #tooltip="matTooltip" md-raised-button [matTooltip]="element.product"
                                             matTooltipPosition="right" matTooltipClass="custom-tooltip">
                                             {{element.product}}
-                                        </span>
+                                        </span> -->
+                                        <span>{{element.product}}</span>
                                     </td>
                                 </ng-container>
 
                                 <!-- amount -->
                                 <ng-container matColumnDef="amount">
                                     <th mat-header-cell *matHeaderCellDef [style.width.px]="150">Cantidad</th>
-                                    <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{element.amount}} </td>
                                 </ng-container>
 
-                                <!-- disclaimer column -->
+                                <!-- ERROR COLUMN -->
                                 <ng-container matColumnDef="disclaimer">
                                     <td mat-footer-cell *matFooterCellDef colspan="3">
-                                        <div class="text-danger text-center" *ngIf="getReqStatus === 3">
-                                            Ocurrió un error al consultar los usuarios
+                                        <div class="text-danger text-center" [hidden]="topProductsReqStatus !== 3">
+                                            Ocurrió un error al consultar los productos
                                         </div>
                                     </td>
                                 </ng-container>
 
-                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                <tr mat-header-row *matHeaderRowDef="topProductsColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: topProductsColumns;"></tr>
                                 <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
-                                    [hidden]="getReqStatus !== 3"></tr>
+                                    [hidden]="topProductsReqStatus !== 3"></tr>
                             </table>
                         </div>
                     </div>
