show dynamic tabs depending on filters selection in overview components (#106)
* show dynamic titles of top products list in overview-latam component

* show dynamic tabs of chart-heatmap in overview-wrapper component

--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -288,7 +288,15 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="h4">Top Productos</span>
+                        <span class="h4">Top Productos </span>
+                        <ng-container *ngIf="selectedCategories?.length > 1">
+                            <ng-container [ngSwitch]="selectedTab6">
+                                <span *ngSwitchCase="1" class="h4">- PS</span>
+                                <span *ngSwitchCase="2" class="h4">- HW Print</span>
+                                <span *ngSwitchCase="3" class="h4">- Supplies</span>
+                            </ng-container>
+                        </ng-container>
+
                     </div>
                     <div class="card-body">
                         <div class="adaptable-container" [ngClass]="{'auto': topProductsReqStatus === 3}">
