update states and responsive properties in charts components (#121)
* update condition to show loader in charts components

* remove responsive property in some charts components

--- a/src/app/modules/dashboard/components/charts/chart-lollipop/chart-lollipop.component.html
+++ b/src/app/modules/dashboard/components/charts/chart-lollipop/chart-lollipop.component.html
@@ -1,6 +1,6 @@
 <div class="chart" [style.height]="height">
     <!-- loader -->
-    <app-chart-loader [hidden]="status !== 1"></app-chart-loader>
+    <app-chart-loader [hidden]="status > 1"></app-chart-loader>
 
     <!-- ready -->
     <div [hidden]="status !== 2 || data?.length < 1" [id]="graphID" style="height: 100%"></div>
